src/test/deca/syntax/invalid/lexer/include_tests/test.decah
// file needed to test #include "test.decah"
print("test imported");